--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <!-- Place favicon.ico in the root directory -->
 
+        <!-- CSS files -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -39,6 +42,7 @@
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/app/spreadsheet_utility.js"></script>
         <script src="js/app/spreadsheet_equations.js"></script>
         <script src="js/app/spreadsheet_calculator.js"></script>
