--- a/index.html
+++ b/index.html
@@ -22,19 +22,38 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div> 
+        <div class="container"> 
             <!-- Title -->
-            <h1> Spreadsheet Application </h1>
+            <div class="page-header">
+                <h1> Spreadsheet Application </h1>
+            </div>
             <div id="button-panel"> 
                 <!-- Buttons -->
-                <button id="reload-button" type="button"> Refresh Table </button>
-                <button id="bold-button" type="button"><b> B </b></button>
-                <button id="italics-button" type="button"><b><i> I </i></b></button>
-                <button id="underline-button" type="button"><b><u> U </u></b></button>
+                <button id="reload-button" type="button" class="btn btn-primary" aria-label="Refresh Table">
+                      <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+                </button>
+                <div class="btn-group">
+                    <!-- alignments -->
+                    <button type="button" class="btn btn-default" aria-label="Left Align">
+                      <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+                    </button>
+                    <button type="button" class="btn btn-default" aria-label="Center Align">
+                      <span class="glyphicon glyphicon-align-center" aria-hidden="true"></span>
+                    </button>
+                    <button type="button" class="btn btn-default" aria-label="Right Align">
+                      <span class="glyphicon glyphicon-align-right" aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="btn-group">
+                    <!-- formatters -->
+                    <button id="bold-button" type="button" class="btn btn-default"><b> B </b></button>
+                    <button id="italics-button" type="button" class="btn btn-default"><b><i> I </i></b></button>
+                    <button id="underline-button" type="button" class="btn btn-default"><b><u> U </u></b></button>
+                </div>
             </div>
-            <div>
+            <div class="table-responsive">
                 <!-- Spreadsheet View -->
-                <table id="spreadsheet"></table>
+                <table id="spreadsheet" class="table table-bordered table-condensed"></table>
             </div>
         </div>
 
