--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
 
         <!-- Scripts -->
+        <!-- <script data-main="js/app/spreadsheet_main" src="js/vendor/require.js"></script> -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
