refactor to use requirejs

--- a/index.html
+++ b/index.html
@@ -58,17 +58,6 @@
         </div>
 
         <!-- Scripts -->
-        <!-- <script data-main="js/app/spreadsheet_main" src="js/vendor/require.js"></script> -->
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/app/spreadsheet_utility.js"></script>
-        <script src="js/app/spreadsheet_equations.js"></script>
-        <script src="js/app/spreadsheet_calculator.js"></script>
-        <script src="js/app/spreadsheet_parser.js"></script>
-        <script src="js/app/spreadsheet_table.js"></script>
-        <script src="js/app/spreadsheet_main.js"></script>
-
+        <script data-main="js/app" src="js/vendor/require.js"></script> 
     </body>
 </html>
