added cell alignment functionality

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 </button>
                 <div class="btn-group">
                     <!-- alignments -->
-                    <button type="button" class="btn btn-default" aria-label="Left Align">
+                    <button id="align-left-button" type="button" class="btn btn-default" aria-label="Left Align">
                       <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
                     </button>
-                    <button type="button" class="btn btn-default" aria-label="Center Align">
+                    <button id="align-center-button" type="button" class="btn btn-default" aria-label="Center Align">
                       <span class="glyphicon glyphicon-align-center" aria-hidden="true"></span>
                     </button>
-                    <button type="button" class="btn btn-default" aria-label="Right Align">
+                    <button id="align-right-button" type="button" class="btn btn-default" aria-label="Right Align">
                       <span class="glyphicon glyphicon-align-right" aria-hidden="true"></span>
                     </button>
                 </div>
